# VTK_programs

./: Assignments.txt  BoxDemo.cpp  DICOMImageInteractor.cpp  DICOM_read_single_file_works_vtk5.cpp  DICOM_reader_works_on_vtk5.cpp  DICOM_reader_works_on_vtk7.cpp  Hello.cpp  ImageData_to_VolumeData.cpp  ImageData_to_VolumeData_sphere.cpp  Move_glyph_sphere.cpp  Pick_point_and_closest_point.cpp  README.md  Reamer2D.cpp  Rotate_points.cpp  STL_read_stl_file.cpp  SixPlanesBox.cpp  Slider2D.cpp  add_key_points_different_color_planes.cpp  add_key_points_on_geometry.cpp  add_key_points_on_pelvic_girdle_and_define_3_planes.cpp  add_key_points_on_pelvic_girdle_calculate__.cpp  align_tool_to_random_vector.cpp  arrow_at_all_points_of_sphere.cpp  boundary_tracing_using_blobs_and_polylines.cpp  clip_sphere_using_keys.cpp  clip_sphere_using_slider.cpp  clipping_sphere.cpp  cone_nonuniform_scale.cpp  coordinate_system.cpp  coordinate_system_draw.cpp  copydlls.cmd  create_arrow_on_snapped_point_with_surface_normal.cpp  cutview_solid_using_3_planes.cpp  cutview_solid_using_box.cpp  display_dicom_volume.cpp  dragging_inserting.cpp  dragging_point.cpp  drawRectangle.cpp  draw_border.cpp  draw_selected_triangle_on_geometry.cpp  (+40 more)
0VTK_QT_Template/: readme.txt
0VTK_QT_Template/Source/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
10DICOM_TopoViewUsingRenderer/Source/: mainwindow.cpp
10vtkDICOMTopoViewUsingRenderer/Source/: mainwindow.h  modelinteractionstyle.h
11DICOM_TopoViewUsingImageActor/: readme.txt  run.cmd
11DICOM_TopoViewUsingImageActor/Source/: mainwindow.cpp  mainwindow.h
11vtkDICOMTopoViewImageActor/Source/: CMakeLists.txt  mainwindow.h
11vtkDICOMTopoViewUsingActor2D/Source/: mainwindow.cpp
11vtkDICOMTopoViewUsingImageActor/Source/: mainwindow.cpp  mainwindow.h
12DICOM_MPRView/Source/: CMakeLists.txt  PlaneWidgetCallback.h  mainwindow.h
12vtkDICOMMPRView/Source/: dicominteractionstyle.h  mainwindow.cpp
13CameraDemo/Source/: mainwindow.cpp
13vtkCameraDemo/Source/: mainwindow.cpp  mainwindow.h
14DICOMDifferentSpacingNew/Source/: dicominteractionstyle.h  mainwindow.h
14vtkDICOMDifferentSpacingNew/Source/: mainwindow.cpp
15DICOMDifferentSpacing2X2/Source/: mainwindow.cpp
15vtkDICOMDifferentSpacing2X2/Source/: mainwindow.cpp  mainwindow.h
16TopoView/: readme.txt
16TopoView/Source/: avTopoViewer.cpp  mainwindow.cpp  mainwindow.h  modelinteractionstyle.h
16vtkTopoViewI/Source/: CMakeLists.txt  TopoViewer.cpp  TopoViewer.h  dicominteractionstyle.h  mainwindow.cpp  mainwindow.h
17DICOMTopoView2X2/Source/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
18TopoViewUsingVOI/Source/: CMakeLists.txt  avTopoViewer.h  mainwindow.cpp
19DraggableObject/Source/: CMakeLists.txt  dicominteractionstyle.h  mainwindow.cpp  mainwindow.h
1vtkQTDemo/: CMakeLists.txt  copydlls.cmd  mainwindow.cpp  readme.txt  run.cmd  vtkbuild.cmd
20ImageSelection/Source/: mainwindow.cpp  mainwindow.h
21TopoViewUsingActorAndDragging/Source/: CMakeLists.txt  avTopoViewerCallbacks.h  avTopoViewerEx.cxx  avTopoViewerEx.h  dicominteractionstyle.h  dicominteractionstyle.h.bak  mainwindow.cpp  mainwindow.h
22ExternalTopoView2X2/Source/: avTopoViewerEx.cxx  avTopoViewerEx.h  dicominteractionstyle.h  mainwindow.cpp  mainwindow.h
23ImageResize/Source/: dicominteractionstyle.h  mainwindow.cpp  mainwindow.h
24ExternalTopoViewV1/Source/: CMakeLists.txt  avTopoViewerEx.cxx  avTopoViewerEx.h
25ExternalTopoViewV2/: readme.txt
25ExternalTopoViewV2/Source/: avTopoViewerEx.cxx  avTopoViewerEx.h  dicominteractionstyle.h  mainwindow.cpp  mainwindow.h
26ExternalTopoViewV3/Source/: CMakeLists.txt  avTopoObserver.cxx  avTopoObserver.h  avTopoViewerEx.cxx  avTopoViewerEx.h  mainwindow.cpp  mainwindow.h
27TableRemoval/: copydlls.cmd
27TableRemoval/Source/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  modelinteractionstyle.h
28PlanningBox/: readme.txt
28PlanningBox/Source/: mainwindow.cpp  mainwindow.h
2vtkQTDemo1/: readme.txt
2vtkQTDemo1/Source/: dicominteractionstyle.h  mainwindow.cpp  mainwindow.h
3vtkQTDemo2/Source/: CMakeLists.txt  GPLView.cpp  GPLView.h  MouseEventHandler.cpp  MouseEventHandler.h  mainwindow.cpp  mainwindow.h
4ThreadUsingWorkerClass/: ThreadUsingWorkerClass.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
5DICOMViewer/: readme.txt
5DICOMViewer/Source/: mainwindow.cpp  mainwindow.h  modelinteractionstyle.h
6DemoPlainWidget/Source/: CMakeLists.txt  mainwindow.h
6vtkQTDemoPlanWidget/Source/: mainwindow.cpp
7MultipleViewports/Source/: mainwindow.h
7vtkMultipleViewports/Source/: main.cpp  mainwindow.cpp
8QuadViewports/Source/: mainwindow.cpp
8vtkQuadViewports/: copydlls.cmd
9DICOM_QuadView/Source/: mainwindow.h
9vtkDICOMQuadView/Source/: dicominteractionstyle.h  mainwindow.cpp
Source/: BoxDemo.cpp  CMakeLists.txt  DICOMImageInteractor.cpp  DICOM_read_single_file_works_vtk5.cpp  DICOM_reader_works_on_vtk5.cpp  DICOM_reader_works_on_vtk7.cpp  Hello.cpp  ImageData_to_VolumeData.cpp  ImageData_to_VolumeData_sphere.cpp  Move_glyph_sphere.cpp  Pick_point_and_closest_point.cpp  Reamer2D.cpp  Rotate_points.cpp  STL_read_stl_file.cpp  SixPlanesBox.cpp  Slider2D.cpp  add_key_points_different_color_planes.cpp  add_key_points_on_geometry.cpp  add_key_points_on_pelvic_girdle_and_define_3_planes.cpp  add_key_points_on_pelvic_girdle_calculate__.cpp  align_tool_to_random_vector.cpp  arrow_at_all_points_of_sphere.cpp  boundary_tracing_using_blobs_and_polylines.cpp  clip_sphere_using_keys.cpp  clip_sphere_using_slider.cpp  clipping_sphere.cpp  cone_nonuniform_scale.cpp  coordinate_system.cpp  coordinate_system_draw.cpp  create_arrow_on_snapped_point_with_surface_normal.cpp  cutview_solid_using_3_planes.cpp  cutview_solid_using_box.cpp  display_dicom_volume.cpp  dragging_inserting.cpp  dragging_point.cpp  drawRectangle.cpp  draw_border.cpp  draw_selected_triangle_on_geometry.cpp  glyph_3d_sphere_sphere.cpp  half_sphere.cpp  (+31 more)
data/: viewing.ini
data/Brain/: pelvic_girdle_smooth.stl
data/SingleImage/: 1.dcm  LocalizerPatient.dcm
(+360 files in other folders)
